# sony-data-eng-demo

./: .gitignore  1_qry.csv  DEMO_README.md  README.md  authenticator: programmatic_access_token  demo_overview.txt  demo_presentation_guide.md  for_sony.md  incremental_load.py  overview.txt  sample_queries.csv  sony_verified_queries.csv
SONY_DE_ANALYTICS_sony_entertainment_agent/: optimization_log.md
demo_scripts/: data_batch_01_initial.sql  data_batch_02_incremental.sql  data_batch_03_release.sql  demo_execution_incremental.sql  step_01_environment_setup.sql  step_02_rbac_setup.sql  step_03_bronze_layer.sql  step_04_streams_tasks.sql  step_06_dynamic_tables.sql  step_07_data_quality.sql  step_08_dbt_project.sql  step_09_streamlit_dashboard.sql  (+3 more)
sony_dbt/sony_spe/: .env.example  .gitignore  dbt_project.yml  main.py  profiles.yml  pyproject.toml
sony_dbt/sony_spe/models/marts/dims/: dim_fans.sql  dim_titles.sql  schema.yml
sony_dbt/sony_spe/models/marts/facts/: fact_daily_performance.sql  schema.yml
sony_dbt/sony_spe/models/staging/: schema.yml  sources.yml  stg_box_office_clean.sql  stg_box_office_dedup.sql  stg_fans_unified.sql  stg_titles_parsed.sql
sony_dbt/sony_spe/models/tests/: dynamic_tables.yml
sony_dbt/sony_spe/snapshots/: schema.yml  snap_dim_fans.sql
sony_dbt/sony_spe/tests/: assert_dynamic_tables_populated.sql  assert_fact_title_referential_integrity.sql  assert_no_fan_data_loss.sql  assert_no_negative_revenue.sql  assert_snapshot_single_current_record.sql  assert_snapshot_valid_date_ranges.sql  assert_stream_routing_correct.sql
(+12 files in other folders)
